--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
                 <configuration>
                     <suiteXmlFiles>
                         <!--suppress UnresolvedMavenProperty -->
-                        <suiteXmlFile>${suite}.xml</suiteXmlFile>
+<!--                        <suiteXmlFile>${suite}.xml</suiteXmlFile>-->
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
